Fixed alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -114,7 +114,7 @@ a:hover {
 .product {
   margin:5px;
   padding: 5px;
-  height:auto;
+  height: 280px;
   width:172px;
   float:left;
 }
